--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
         <textarea id="comment" placeholder = "Введіть текст"></textarea>
       </label>
 
-      <label class="checkbox">
-        <input style = "color:black;" type="checkbox" id="agree" required />  <p style = "color: black;">Погоджуюсь з розсилкою та приймаю</p> <a href="#" style = "color: #188CE8">Умови договору</a>
+<label class="agree-line">
+  <input type="checkbox">
+  <span>Погоджуюсь з розсилкою та приймаю <a href="#">Умови договору</a></span>
+</label>
 
-      </label>
 
       <button type="submit" class="send-btn">Відправити</button>
     </form>
