--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <label class="agree-line">
   <input type="checkbox">
-  <span>Погоджуюсь з розсилкою та приймаю <a href="#">Умови договору</a></span>
+  <span>Погоджуюсь з розсилкою та приймаю <a href="#" style = "color: rgba(33, 150, 243, 1)">Умови договору</a></span>
 </label>
 
 
