--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="modal-window">
     <button class="modal-close close-btn" data-modal-close>&times;</button>
     <br>
-    <h4 class="modal-title" style = "text-align:left; color: black;">Залиште свої дані, ми вам передзвонимо</h2>
+    <h4 class="modal-title" style = "text-align:left; color: black;  white-space: nowrap;">Залиште свої дані, ми вам передзвонимо</h2>
 
     <form class="modal-form">
       <label>
