--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <label>
         <span style = "color: black; text-align:left;">Пошта</span>
-        <input type="email" id="email" required /<svg><use href = "icon-email-black-18dp-1"></use></svg>>
+        <input type="email" id="email" required /<svg><use href = "./symbol-defs.svg#icon-email-black-18dp-1"></use></svg>>
       </label>
 
       <label>
@@ -366,9 +366,12 @@
             <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </a>
         </li>
+              <label>
+        <span style = "color: black; text-align:left;">Пошта</span>
+        <input type="email" id="email" required /<svg><use href = "icon-email-black-18dp-1"></use></svg>>
+      </label>
       </ul>
     </div>
-
   </div>
 </footer>
 </body>
