--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
             <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </a>
         </li>
+        <label>
+        <h3 style = "color: white; text-align:left; ">Підпишіться на розсилку</h3>
+        <input style = "background-color: rgba(47, 48, 58, 1);" type="email" id="email" required placeholder = "E-mail" />
+      </label>
       </ul>
     </div>
   </div>
