--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           </a>
         </li>
         <label>
-        <h3 style = "color: white; text-align:left; ">Підпишіться на розсилку</h3>
+        <h4 style = "color: white; text-align:left;  white-space: no-wrap; ">Підпишіться на розсилку</h4>
         <input style = "background-color: rgba(47, 48, 58, 1);" type="email" id="email" required placeholder = "E-mail" />
       </label>
       </ul>
