--- a/index.html
+++ b/index.html
@@ -366,10 +366,12 @@
             <svg><use href="./symbol-defs.svg#icon-linkedin-1"></use></svg>
           </a>
         </li>
+        <form class="modal-form">
         <label>
-        <h4 style = "color: white; text-align:left;  white-space: no-wrap; ">Підпишіться на розсилку</h4>
+        <h4 style = "color: white; text-align:left;  white-space: nowrap; ">Підпишіться на розсилку</h4>
         <input style = "background-color: rgba(47, 48, 58, 1);" type="email" id="email" required placeholder = "E-mail" />
       </label>
+      </form>
       </ul>
     </div>
   </div>
