--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <h4 style = "color: white; text-align:left;  white-space: nowrap; ">Підпишіться на розсилку</h4>
         <input style = "background-color: rgba(47, 48, 58, 1);" type="email" id="email" required placeholder = "E-mail" />
       </label>
-      <button type="submit" class="send-btn">Підписатися</button>
+      <button type="submit" class="send-btn" style = "display: block;">Підписатися</button>
       </form>
       </ul>
     </div>
