--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container header-div">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
 
-      <nav class="nav">
+      <nav class="nav nav-menu">
         <ul class="nav-list">
           <li><a href="index.html" class="nav-link current">Студія</a></li>
           <li><a href="https://nik-kul.github.io/Portfolio/"class="nav-link">Портфоліо</a></li>
