--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="container header-div">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
 
-      <nav class="nav nav-menu">
-        <ul class="nav-list">
-          <li><a href="index.html" class="nav-link current">Студія</a></li>
-          <li><a href="https://nik-kul.github.io/Portfolio/"class="nav-link">Портфоліо</a></li>
-          <li><a href="#" class="nav-link">Контакти</a></li>
+      <nav>
+        <ul class="nav">
+          <li><a href="https://nik-kul.github.io/WebStudio/">Студія</a></li>
+          <li><a href="portfolio.html" class="active">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
-      </nav>
+        
       <ul class = "hedul">
         <li> <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-envelope-hover"></use></svg> <a class="gmail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       </ul>
@@ -31,6 +31,7 @@
         <li> <svg class = "headul header-svg-items"><use href = "./symbol-defs.svg#icon-Vector"></use></svg><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
+  </nav>
   </header>
 
   <!-- Hero section -->
