--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <nav style = "display: block;">
         <ul class="nav" style = "display: block;">
-          <li><a href="https://nik-kul.github.io/WebStudio/">Студія</a></li>
-          <li><a href="portfolio.html" class="active">Портфоліо</a></li>
+          <li><a  class="active" href="https://nik-kul.github.io/WebStudio/">Студія</a></li>
+          <li><a href="portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
