--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container header-div">
       <a href="index.html" class="logo"><span>Web</span>Studio</a>
 
-      <nav style = "display: block;">
-        <ul class="nav" style = "display: block;">
+      <nav>
+        <ul class="nav">
           <li><a  class="active" href="https://nik-kul.github.io/WebStudio/">Студія</a></li>
           <li><a href="portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
