--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul class="nav">
           <li><a  class="active" href="https://nik-kul.github.io/WebStudio/">Студія</a></li>
-          <li><a href="portfolio.html">Портфоліо</a></li>
+          <li><a href="https://nik-kul.github.io/Portfolio/">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
