--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebStudio</title>
 
-  <link rel="stylesheet" href="../9.css" />
+  <link rel="stylesheet" href="../styles.css" />
   <link rel="stylesheet" href="normaliza.css" />
-  <link rel="stylesheet" href="9.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
