--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="container hero__inner">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero__button" type="button" data-modal-open>Замовити послугу</button>
-
+      </div>
         <!-- Modal -->
         <div class="modal modal--hidden" data-modal>
           <div class="modal__window">
