--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           <li><a href="https://nik-kul.github.io/Portfolio/">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
+        <button class="menu-btn" type="button" aria-label="Відкрити меню" aria-expanded="false" data-menu-open>
+  <span class="menu-btn-lines"></span>
+</button>
+
       </nav>
         
       <ul class = "hedul">
@@ -31,7 +35,35 @@
       </ul>
     </div>
   </header>
+  <div class="mobile-menu" data-menu aria-hidden="true">
+  <div class="mobile-menu__panel">
+    <button class="close-circle mobile-menu__close" type="button" aria-label="Закрити меню" data-menu-close></button>
 
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__list">
+        <li><a class="mobile-nav__link active" href="https://nik-kul.github.io/WebStudio/">Студія</a></li>
+        <li><a class="mobile-nav__link" href="https://nik-kul.github.io/Portfolio/">Портфоліо</a></li>
+        <li><a class="mobile-nav__link" href="#">Контакти</a></li>
+      </ul>
+    </nav>
+
+    <div class="mobile-contacts">
+      <a class="mobile-contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+      <a class="mobile-contacts__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    </div>
+
+    <ul class="mobile-social">
+      <li><a class="mobile-social__link" href="#">Instagram</a></li>
+      <li><a class="mobile-social__link" href="#">Twitter</a></li>
+      <li><a class="mobile-social__link" href="#">Facebook</a></li>
+      <li><a class="mobile-social__link" href="#">LinkedIn</a></li>
+    </ul>
+  </div>
+</div>
+<script src="./js/mobile-menu.js"></script>
+
+
+  
   <!-- Hero section -->
   <section class="hero">
     <div class="container">
