--- a/mobile.html
+++ b/mobile.html
@@ -1,1 +1,229 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WebStudio</title>
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="container">
+    <h1>Ефективні рішення для вашого бізнесу</h1>
+  </div>
+</section>
+
+<!-- FEATURES -->
+<section class="section">
+  <div class="container">
+    <ul class="features-list">
+
+      <!-- 1 -->
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="
+            ./images/features/attention-desk-1x.jpg 1x,
+            ./images/features/attention-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="
+            ./images/features/attention-tab-1x.jpg 1x,
+            ./images/features/attention-tab-2x.jpg 2x">
+          <img src="./images/features/attention-mob-1x.jpg"
+            srcset="./images/features/attention-mob-2x.jpg 2x"
+            alt="Увага до деталей"
+            loading="lazy">
+        </picture>
+        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+      </li>
+
+      <!-- 2 -->
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="
+            ./images/features/punctuality-desk-1x.jpg 1x,
+            ./images/features/punctuality-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="
+            ./images/features/punctuality-tab-1x.jpg 1x,
+            ./images/features/punctuality-tab-2x.jpg 2x">
+          <img src="./images/features/punctuality-mob-1x.jpg"
+            srcset="./images/features/punctuality-mob-2x.jpg 2x"
+            alt="Пунктуальність"
+            loading="lazy">
+        </picture>
+        <h3>ПУНКТУАЛЬНІСТЬ</h3>
+      </li>
+
+      <!-- 3 -->
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="
+            ./images/features/planning-desk-1x.jpg 1x,
+            ./images/features/planning-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="
+            ./images/features/planning-tab-1x.jpg 1x,
+            ./images/features/planning-tab-2x.jpg 2x">
+          <img src="./images/features/planning-mob-1x.jpg"
+            srcset="./images/features/planning-mob-2x.jpg 2x"
+            alt="Планування"
+            loading="lazy">
+        </picture>
+        <h3>ПЛАНУВАННЯ</h3>
+      </li>
+
+      <!-- 4 -->
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="
+            ./images/features/technology-desk-1x.jpg 1x,
+            ./images/features/technology-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="
+            ./images/features/technology-tab-1x.jpg 1x,
+            ./images/features/technology-tab-2x.jpg 2x">
+          <img src="./images/features/technology-mob-1x.jpg"
+            srcset="./images/features/technology-mob-2x.jpg 2x"
+            alt="Сучасні технології"
+            loading="lazy">
+        </picture>
+        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+      </li>
+
+    </ul>
+  </div>
+</section>
+
+<!-- WHAT DO WE DO -->
+<section class="section">
+  <div class="container">
+    <ul class="WhatDoWeDo-section-list">
+
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/whatwedo/desktop-desk-1x.jpg 1x,
+                    ./images/whatwedo/desktop-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/whatwedo/desktop-tab-1x.jpg 1x,
+                    ./images/whatwedo/desktop-tab-2x.jpg 2x">
+          <img src="./images/whatwedo/desktop-mob-1x.jpg"
+            srcset="./images/whatwedo/desktop-mob-2x.jpg 2x"
+            alt="Десктопні додатки"
+            loading="lazy">
+        </picture>
+      </li>
+
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/whatwedo/mobile-desk-1x.jpg 1x,
+                    ./images/whatwedo/mobile-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/whatwedo/mobile-tab-1x.jpg 1x,
+                    ./images/whatwedo/mobile-tab-2x.jpg 2x">
+          <img src="./images/whatwedo/mobile-mob-1x.jpg"
+            srcset="./images/whatwedo/mobile-mob-2x.jpg 2x"
+            alt="Мобільні додатки"
+            loading="lazy">
+        </picture>
+      </li>
+
+      <li>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/whatwedo/design-desk-1x.jpg 1x,
+                    ./images/whatwedo/design-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/whatwedo/design-tab-1x.jpg 1x,
+                    ./images/whatwedo/design-tab-2x.jpg 2x">
+          <img src="./images/whatwedo/design-mob-1x.jpg"
+            srcset="./images/whatwedo/design-mob-2x.jpg 2x"
+            alt="Дизайнерські рішення"
+            loading="lazy">
+        </picture>
+      </li>
+
+    </ul>
+  </div>
+</section>
+
+<!-- TEAM -->
+<section class="section">
+  <div class="container">
+    <div class="team-container">
+
+      <div>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/team/ihor-desk-1x.jpg 1x,
+                    ./images/team/ihor-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/team/ihor-tab-1x.jpg 1x,
+                    ./images/team/ihor-tab-2x.jpg 2x">
+          <img src="./images/team/ihor-mob-1x.jpg"
+            srcset="./images/team/ihor-mob-2x.jpg 2x"
+            alt="Ігор Дем'яненко"
+            loading="lazy">
+        </picture>
+      </div>
+
+      <div>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/team/olha-desk-1x.jpg 1x,
+                    ./images/team/olha-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/team/olha-tab-1x.jpg 1x,
+                    ./images/team/olha-tab-2x.jpg 2x">
+          <img src="./images/team/olha-mob-1x.jpg"
+            srcset="./images/team/olha-mob-2x.jpg 2x"
+            alt="Ольга Рєпіна"
+            loading="lazy">
+        </picture>
+      </div>
+
+      <div>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/team/mykola-desk-1x.jpg 1x,
+                    ./images/team/mykola-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/team/mykola-tab-1x.jpg 1x,
+                    ./images/team/mykola-tab-2x.jpg 2x">
+          <img src="./images/team/mykola-mob-1x.jpg"
+            srcset="./images/team/mykola-mob-2x.jpg 2x"
+            alt="Микола Тарасов"
+            loading="lazy">
+        </picture>
+      </div>
+
+      <div>
+        <picture>
+          <source media="(min-width:1200px)"
+            srcset="./images/team/mykhailo-desk-1x.jpg 1x,
+                    ./images/team/mykhailo-desk-2x.jpg 2x">
+          <source media="(min-width:768px)"
+            srcset="./images/team/mykhailo-tab-1x.jpg 1x,
+                    ./images/team/mykhailo-tab-2x.jpg 2x">
+          <img src="./images/team/mykhailo-mob-1x.jpg"
+            srcset="./images/team/mykhailo-mob-2x.jpg 2x"
+            alt="Михайло Єрмаков"
+            loading="lazy">
+        </picture>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+</body>
+</html>
 
