--- a/mobile.html
+++ b/mobile.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -13,6 +12,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
+<script src="./js/mobile-menu.js" defer></script>
+
+
+  
 <body>
   <!-- Header -->
   <header class="header">
